# atoma-contracts

./: README.md  atoma_publish  atoma_publish_update  deployment.txt  toma_publish
solana/: Anchor.toml  Cargo.toml  README.md
solana/dev/: check
solana/programs/atoma/: Cargo.toml
solana/programs/atoma/src/: lib.rs
solana/programs/toma/: Cargo.toml
solana/programs/toma/src/: lib.rs
solana/tests/: atoma.ts
sui/: .editorconfig  .gitignore  OVERVIEW.md  README.md
sui/cli/: Cargo.toml
sui/cli/src/: add_model.rs  add_model_echelon.rs  add_node_to_model.rs  db.rs  dotenv_conf.rs  gate.rs  main.rs  prelude.rs  register_node.rs  set_required_registration_collateral.rs  settle.rs  submit_example_text_prompt.rs  submit_tell_me_a_joke_prompt.rs  toma.rs
sui/cli/src/db/: acquire_new_stack_entry.rs  add_model.rs  add_model_echelon.rs  add_node_to_model.rs  claim_funds.rs  create_task_entry.rs  deprecate_task.rs  destroy_disabled_node.rs  new_network_key_rotation.rs  permanently_disable_node.rs  print_env.rs  print_node_configuration.rs  register_node.rs  remove_deprecated_task.rs  remove_node_from_model.rs  rotate_node_public_key.rs  set_required_registration_collateral.rs  start_attestation_dispute.rs  submit_stack_settlement_attestation.rs  subscribe_node_to_task.rs  try_settle_stack.rs  unsubscribe_node_from_task.rs  unsubscribe_node_from_task_by_index.rs  update_node_subscription.rs  whitelist_nodes_for_task.rs
sui/cli/src/gate/: send_image_prompt.rs  send_image_prompt_to_gateway.rs  send_image_prompt_to_ipfs.rs  send_prompt.rs  send_prompt_to_gateway.rs  send_prompt_to_ipfs.rs  submit_generate_nft_prompt.rs  submit_tell_me_a_joke_prompt.rs
sui/cli/src/settle/: list_tickets.rs  submit_commitment.rs  try_to_settle.rs
sui/cli/src/toma/: faucet.rs
sui/contracts/gate/: Move.toml
sui/contracts/gate/sources/: gate.move
sui/contracts/node_manager/: Move.toml
sui/contracts/node_manager/sources/: node_manager.move
sui/contracts/toma/: Move.toml
sui/contracts/toma/sources/: toma.move
sui/dev/: check  cli  faucet  multisig  node_setup.sh  oneclicksetup  oneclicksetup.py  print_toma_pkg_id  publish_toma  setup.py
