[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "=0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.0", features = ["metadata"] }
bytemuck = "*"                                                       # whatever version needed by the anchor crate

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
