[package]
name = "atoma"
version = "0.1.0"
description = "Atoma network on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "atoma"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
bytemuck.workspace = true
